# chat-app

./: .gitignore  README.md  docker-compose.yml
active-sessions/: Cargo.toml  Dockerfile  build.rs
active-sessions/proto/: active-sessions.proto
active-sessions/src/: client.rs  config.rs  main.rs
auth-service/: Cargo.toml  Dockerfile  build.rs
auth-service/protos/: active_sessions.proto  auth.proto  loginValidation.proto
auth-service/src/: auth_service.rs  config.rs  main.rs  security.rs  seed_demo.rs
browser-facade/: GreeterService.cs  MainMenu.cs
browser-facade/aspnetapp/: Program.cs  appsettings.Development.json  aspnetapp.csproj
browser-facade/aspnetapp/Pages/: Chat.cshtml  Chat.cshtml.cs  Friends.cshtml  Friends.cshtml.cs  Logout.cshtml  Logout.cshtml.cs  MainLogin.cshtml  MainLogin.cshtml.cs  MainMenu.cshtml  MainMenu.cshtml.cs  Messages.cshtml  Messages.cshtml.cs  Register.cshtml  Register.cshtml.cs
browser-facade/aspnetapp/protos/: BrowserFacade.proto  Greeter.proto
docs/: ActiveSessions.md  MainService-AuthService.md  active-sessions.md  auth-service.md  browser-facade.md  communication-ideas.md  main-service.md  message-data-center.md
main-service/: Dockerfile  package-lock.json  package.json
main-service/protos/: BrowserFacade.proto  Greeter.proto  auth.proto  browser-facade.proto  service.proto
main-service/src/: greet.proto  package-lock.json  package.json  server.js
main-service/src/handlers/: browser-facade-handlers.js
main-service/src/lib/: handler_wrapper.js  servers.js
message-data-centre/: .gitignore  Dockerfile  go.mod  go.sum  main.go  readme.md
message-data-centre/proto/: service.pb.go  service.proto  service_grpc.pb.go
message-data-centre/protos/: messagecentre.proto
message-data-centre/server/: conversation.go  main.go  messages.go
message-data-centre/server/config/: config.go
message-data-centre/server/data/: message.go
message-db/: init-mongo.js  mongod.conf
message-db/mongo-init-scripts/: init-mongo.js
protos/: loginValidation.proto
(+7 files in other folders)
