[package]
name = "active-sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.1"
tonic-build = "0.6.1"
prost = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[build-dependencies]
#tonic-build = "0.7"