[package]
name = "active-sessions"
version = "0.1.0"
edition = "2018"

# Specify the Rust edition.
[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.6", features = ["transport"] }
async-trait = "0.1"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
rand = "0.8"
prost = "0.9"
prost-types = "0.9"
tonic-build = "0.6"

[build-dependencies]
tonic-build = "0.6"

# Set build script
[package.metadata]
rust-version = "1.56.0"

[workspace]
members = ["."]
