[package]
name = "active-sessions"
version = "0.1.0"
edition = "2021"

# Specify the Rust edition.
[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11.0"
async-trait = "0.1"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
rand = "0.8"
prost = "0.12.6"
prost-types = "0.12.6"
tonic-build = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"